# inscan

./: .gitignore  Cargo.toml  readme.md
.github/script/: release.sh
.github/workflows/: release.yml
crates/inscriptions/: Cargo.toml
crates/ordinals/src/: lib.rs
docs/: data-structure.md
sql/: db.sh  db_drop.sql  db_init.sql  db_init_runestone.sql  db_truncate.sql  docker-compose.yml
src/: cli.rs  deserialize_from_str.rs  lib.rs  main-copy.py  scan.rs
src/atomicals/: arc20.rs  mod.rs
src/ord/: chain.rs  envelope.rs  inscription.rs  inscription_id.rs  media.rs  mod.rs  readme.md  tag.rs  teleburn.rs
src/ord/brcX/: brc20.rs
src/runealpha/: chain.rs  edict.rs  error.rs  etching.rs  mod.rs  pile.rs  readme.md  rune.rs  rune_id.rs  runestone.rs  varint.rs
