[package]
name = "inscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "crates/ordinals"]

[dependencies]
ordinals = { version = "0.0.4", path = "crates/ordinals" }
# ord_inscriptions = { version = "0.1.0", path = "crates/inscriptions" }
anyhow = { version = "1.0.56", features = ["backtrace"] }
bitcoin = { version = "0.30.1", features = ["rand"] }
ord-bitcoincore-rpc = "0.17.2" #use this instead of bitcoincore-rpc, otherwise there is an import conflict with bitcoin
bitcoin_hashes = "0.12.0"
brotli = "3.4.0"
ciborium = "0.2.2"
clap = { version = "4.5.2", features = ["derive"] }
hex = "0.4.3"
http = "1.1.0"
jsonrpc = "0.17.0"
rust-crypto = "0.2.36"
serde = "1.0.197"
mp4 = "0.14.0"
sha3 = "0.10.8"
regex = "1.6.0"
lazy_static = "1.4.0"
tempfile = "3.2.0"
serde_json = "1.0.114"
thiserror = "1.0.58"
base64 = "0.22.0"

[[bin]]
name = "inscan"
path = "src/bin/main.rs"

[lib]
name = "inscan"
path = "src/lib.rs"
