[package]
name = "ord_inscriptions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordinals ={ version = "*", path="../ordinals"}
anyhow = { version = "1.0.56", features = ["backtrace"] }
bitcoin = { version = "0.30.1", features = ["rand"] }
bitcoin_hashes = "0.12.0"
serde = "1.0.197"
http = "1.1.0"
brotli = "3.4.0"
ciborium = "0.2.2"
clap = { version = "4.5.2", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
tempfile = "3.2.0"
mp4 = "0.14.0"
sha3 = "0.10.8"
hex = "0.4.3"